<resources>
    <string name="app_name">train-preserve-ticket</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_home">Home</string>
    <string name="register_header">Register</string>
    <string name="register_username">Email</string>
    <string name="register_password">Password</string>
    <string name="register_hint_username">Enter your email</string>
    <string name="register_hint_password">Enter your password here</string>
    <string name="main1_result">Don\'t have any user</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login_bt_login">LOGIN</string>
    <string name="register_bt_register">REGISTER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_train_default_time">00 : 00</string>
    <string name="menu_search">Search</string>
    <string name="login_title">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_register_change">Not register yet ? Sign up now</string>
    <string name="add_start">Start</string>
    <string name="add_end">End</string>
    <string name="add_train">Train</string>
    <string name="add_date">Date</string>
    <string name="add_time">Time</string>
    <string name="add_price">Price</string>
    <string name="add_add">Add</string>
    <string name="add_back">Back</string>
    <string name="add_title">ADD NEW TRIP</string>
    <string name="admin_add">Add new trip</string>
    <string name="admin_manage">Manage trip</string>
    <string name="admin_check">Check out ticket</string>
    <string name="admin_logout">Log out</string>
    <string name="pc_title">CHECK OUT TICKET</string>
    <string name="pc_phone">Phone number</string>
    <string name="pc_hint">Your Phone number</string>
    <string name="pc_search">Search</string>
    <string name="pc_back">Back</string>
    <string name="preserve_history">PRESERVE HISTORY</string>
    <string name="info_name">Name</string>
    <string name="info_age">Age</string>
    <string name="info_phone">Phone</string>
    <string name="info_address">Address</string>
    <string name="info_update">UPDATE</string>
    <string name="register_title">Register</string>
    <string name="register_confirm_password">Confirm password</string>
    <string name="register_login">Have account ? Log in now</string>
    <string name="search_for_trips">SEARCH FOR TRIPS</string>
    <string name="search_result">SEARCH RESULT</string>
    <string name="history">HISTORY</string>
    <string name="check_out">CHECK OUT</string>
    <string name="trips_list">TRIPS LIST</string>
    <string name="information">Information</string>
    <string name="result_list">RESULT LIST</string>
    <string name="ticketId">ID : </string>
    <string name="items_start">Start : </string>
    <string name="items_end">End : </string>
    <string name="items_train">Train : </string>
    <string name="items_date">Date : </string>
    <string name="items_price">Price : </string>
    <string name="checkout">Checkout</string>
    <string name="checked_out">Checked out</string>
    <string name="cancel">Cancel</string>
    <string name="start_train">Start</string>
    <string name="preserve">Preserve</string>
    <string name="started">Started</string>
</resources>