<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".TicketCheckoutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_result" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cTA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
          />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button_1"
            android:backgroundTint="@color/green"
            android:textColor="@color/ivory"
            android:id="@+id/bt_back_cTA"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/pc_back" />

        <Button
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button_1"
            android:backgroundTint="@color/yellow"
            android:textColor="@color/ivory"
            android:id="@+id/bt_history_cTA"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/history" />


    </LinearLayout>
</LinearLayout>